# wit-bindgen

./: Cargo.toml  build.zig  foo.c  foo.go  foo.h  foo.rs  foo.zig  host.h  host.wit  index.js  mine.zig  package.json  rust-gen.zig
crates/core/src/: abi.rs  lib.rs
crates/go/src/: lib.rs
crates/rust/src/: interface.rs
crates/zig/: Cargo.toml
crates/zig/src/: bindgen.rs  go.rs  interface.rs  lib.rs  rust.rs  zig.rs
crates/zig/tests/: codegen.rs
final/: final.d.ts  final.js
final/interfaces/: example-foo-chars.d.ts  example-foo-fun.d.ts  wasi-filesystem-types.d.ts  wasi-io-streams.d.ts
zig-cache/o/372a03d42f501ca311381bcc085df59d/: builtin.zig
zig-cache/o/42e100dc71cb8a5240037c4c91111702/: builtin.zig
zig-cache/o/7e9c8d7dc72904c4b83ae373a425b50e/: builtin.zig
zig-cache/o/c5ee5ce1de49f52be75c7ac261786af6/: builtin.zig
