[package]
name = "wit-bindgen-zig"
version = "0.13.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
clap = { workspace = true, optional = true }
wit-bindgen-c = { workspace = true }
wasm-metadata.workspace = true
wit-parser.workspace = true

[dev-dependencies]
test-helpers = { path = '../test-helpers' }
